--- a/_main.cfg
+++ b/_main.cfg
@@ -25,6 +25,11 @@ This does not protect your heroes — you’ll still lose if any character who h
 	{./utils/Wound_logic.cfg}
 	{./utils/Randomizer.cfg}
 	{./utils/Wound_Healing.cfg}
+	{./utils/campaign_LoW.cfg}
+	{./utils/campaign_SotA.cfg}
+	{./utils/campaign_UtBS.cfg}
+	{./utils/campaigns.cfg}
+	{./utils/last_scenario.cfg}
+	{./utils/nfw_main.cfg}
 
-    {~add-ons/Non_Fatal_Wounds-Extended/utils}
 [/modification]
