First stable version

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -39,7 +39,20 @@
 		[/case]
 		[case]
 			value=7,32,57,82
-			{NFWME_concussion_WOUND}
+			[if]
+				[have_unit]
+					x,y=$x1,$y1
+					[has_attack]
+						special_id=magical
+					[/has_attack]
+				[/have_unit]
+				[then]
+					{NFWME_concussion_WOUND}
+				[/then]
+				[else]
+					{NFWME_infection_WOUND}
+				[/else]
+			[/if]			
 		[/case]
 		[case]
 			value=8,33,58,83
@@ -99,9 +112,8 @@
 						{NFWME_fear_of_plant_WOUND}
 					[/then]
 				[/elseif]
-				
 				[else]
-					{NFWME_broken_leg_WOUND}
+					{NFWME_broken_arm_WOUND}
 				[/else]
 			[/if]
 		[/case]
@@ -122,11 +134,25 @@
 						{NFWME_fear_of_light_WOUND}
 					[/then]
 				[/elseif]
+				[else]
+					{NFWME_broken_arm_WOUND}
+				[/else]
 			[/if]
 		[/case]
 		[case]
 			value=12,37,62,87
-			{NFWME_frostbite_WOUND}
+			[if]
+				[have_location]
+					{EVENT_UNIT}
+					terrain=A*^*,M*^*,W*^*
+				[/have_location]
+				[then]
+					{NFWME_frostbite_WOUND}
+				[/then]
+				[else]
+					{NFWME_infection_WOUND}
+				[/else]
+			[/if]
 		[/case]
 		[case]
 			value=13,38,63,88
@@ -146,8 +172,7 @@
 		[/case]
 		[case]
 			value=17,42,67,92
-			{NFWME_necrosis_WOUND}
-			
+			{NFWME_necrosis_WOUND}			
 		[/case]
 		[case]
 			value=18,43,68,93
@@ -159,7 +184,20 @@
 		[/case]
 		[case]
 			value=20,45,70,95
-			{NFWME_wild_magic_WOUND}
+			[if]
+				[have_unit]
+					x,y=$x1,$y1
+					[has_attack]
+						special_id=magical
+					[/has_attack]
+				[/have_unit]
+				[then]
+					{NFWME_wild_magic_WOUND}
+				[/then]
+				[else]
+					{NFWME_sick_WOUND}
+				[/else]
+			[/if]
 		[/case]
 		
 		#wounds disabled by default
@@ -206,8 +244,15 @@
 				[then]
 					{NFWME_undead_ghost_WOUND}
 				[/then]
+				
+				[elseif]
+					{NFWME_dead_ENABLED}
+					[then]
+						{NFWME_dead_WOUND}
+					[/then]			
+				[/elseif]				
 				[else]
-					{NFWME_frostbite_WOUND}
+					{NFWME_broken_rib_WOUND}
 				[/else]
 			[/if]
 		[/case]
