--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -164,7 +164,7 @@
 				{SECOND_EVENT_UNIT}
 				object_id=fear_of_desert
 			[/remove_object]
-			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Erimophobi" {NFWME_COLOR_GREEN}}
+			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Erimophobia" {NFWME_COLOR_GREEN}}
 		[/case]
 	[/switch]
 [/event]
