--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -194,6 +194,9 @@
 #define NFWME_captured_WOUND
    [modify_unit]
 		{FILTER_EVENT_UNIT}
+		[filter_side]
+				controller=human
+		[/filter_side]		
 		[object]
 			id=captured_unit
 			[effect]
@@ -322,7 +325,7 @@ Redeem yourself by defeating a strong apponent."
 				[abilities]
 					[attacks]
 						name="<span color='#DA0000'>"+_"Scared of $nfwme_rand_scary_weapon"+"</span>"
-						description=_"-1 stikes when facing their fear.
+						description=_"-1 strikes when facing their fear.
 Face your fears to try and overcome them."
 						id=nfwme_scared_of_weapon
 						affect_self=yes
@@ -428,7 +431,7 @@ Face your fears to try and overcome them."
 				[abilities]
 					[display]
 						id=fear_of_desert_display
-						name="<span color='#DA0000'>"+_"Erimophobi"+"</span>"
+						name="<span color='#DA0000'>"+_"Erimophobia"+"</span>"
 						description=_"Scared of deserts.
 Face your fears to try and overcome them."
 					[/display]
@@ -1150,7 +1153,7 @@ Movement is reduced by 20% and accuracy is reduced by 10%. You will never recove
 		x,y=$x1,$y1
 	[/unstore_unit]
 	{CLEAR_VARIABLE nfwme_ghost_advancment}
-	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"ghost" {NFWME_COLOR_RED}}
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Ghost" {NFWME_COLOR_RED}}
 #enddef
 
 #define NFWME_undead_corpse_WOUND
@@ -1248,7 +1251,7 @@ Movement is reduced by 20% and accuracy is reduced by 10%. You will never recove
 	[/modify_unit]
 	
 	
-	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"zombie" {NFWME_COLOR_RED}}
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Zombie" {NFWME_COLOR_RED}}
 #enddef
 
 #define NFWME_wild_magic_WOUND
