Fixed lua errors

--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -193,10 +193,12 @@
 
 #define NFWME_captured_WOUND
    [modify_unit]
-		{FILTER_EVENT_UNIT}
-		[filter_side]
+		[filter]
+			x,y=$x1,$y1
+			[filter_side]
 				controller=human
-		[/filter_side]		
+			[/filter_side]
+		[/filter]	
 		[object]
 			id=captured_unit
 			[effect]
@@ -316,6 +318,12 @@ Redeem yourself by defeating a strong apponent."
 		name=nfwme_rand_scary_weapon
 		value=$second_unit.attack[$($rand_index-1)].name
 	[/set_variable]
+#textdomain wesnoth-units
+	[set_variable]
+		name=nfwme_translated_scary_weapon
+		value=_"$second_unit.attack[$($rand_index-1)].description"
+	[/set_variable]
+#textdomain wesnoth-Non_Fatal_Wounds
 	[modify_unit]
 		{FILTER_EVENT_UNIT}
 		[object]
@@ -324,7 +332,7 @@ Redeem yourself by defeating a strong apponent."
 				apply_to=new_ability
 				[abilities]
 					[attacks]
-						name="<span color='#DA0000'>"+_"Scared of $nfwme_rand_scary_weapon"+"</span>"
+						name="<span color='#DA0000'>"+_"Scared of $nfwme_translated_scary_weapon"+"</span>"
 						description=_"-1 strikes when facing their fear.
 Face your fears to try and overcome them."
 						id=nfwme_scared_of_weapon
@@ -360,7 +368,7 @@ Face your fears to try and overcome them."
 		x,y=$x1,$y1
 	[/unstore_unit]
 	{CLEAR_VARIABLE nfwme_wounded_unit}
-	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Scared of $nfwme_rand_scary_weapon" {NFWME_COLOR_RED}}
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Scared of $nfwme_translated_scary_weapon" {NFWME_COLOR_RED}}
 #enddef
 
 #define NFWME_fear_of_water_WOUND
