--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -4,7 +4,7 @@
 	name=last_breath
 	id=nfwme_wound_table
 	first_time_only=no
-	{VARIABLE_OP rand_wound rand(1..100)}
+	{VARIABLE_OP rand_wound rand(1..25)}
 	
 	[switch]
 		variable=rand_wound
@@ -14,31 +14,31 @@
 		[/case]
 		
 		[case]
-			value=1,26,51,76
+			value=1
 			{NFWME_amnesia_WOUND}
 		[/case]
 		[case]
-			value=2,27,52,77
+			value=2
 			{NFWME_broken_arm_WOUND}
 		[/case]
 		[case]
-			value=3,28,53,78
+			value=3
 			{NFWME_broken_leg_WOUND}
 		[/case]
 		[case]
-			value=4,29,54,79
+			value=4
 			{NFWME_broken_rib_WOUND}
 		[/case]
 		[case]
-			value=5,30,55,80
+			value=5
 			{NFWME_burned_WOUND}
 		[/case]
 		[case]
-			value=6,31,56,81
+			value=6
 			{NFWME_captured_WOUND}
 		[/case]
 		[case]
-			value=7,32,57,82
+			value=7
 			[if]
 				[have_unit]
 					x,y=$x1,$y1
@@ -55,15 +55,15 @@
 			[/if]			
 		[/case]
 		[case]
-			value=8,33,58,83
+			value=8
 			{NFWME_Coward_WOUND}
 		[/case]
 		[case]
-			value=9,34,59,84
+			value=9
 			{NFWME_fear_of_weapon_WOUND}
 		[/case]
 		[case]
-			value=10,35,60,85
+			value=10
 			[if]
 				[have_location]
 					{EVENT_UNIT}
@@ -118,7 +118,7 @@
 			[/if]
 		[/case]
 		[case]
-			value=11,36,61,86
+			value=11
 			[if]
 				[have_location]
 					time_of_day=chaotic
@@ -140,11 +140,11 @@
 			[/if]
 		[/case]
 		[case]
-			value=12,37,62,87
+			value=12
 			[if]
 				[have_location]
 					{EVENT_UNIT}
-					terrain=A*^*,M*^*,W*^*
+					terrain=A*^*,M*^*,W*^*,*^Esa,*^Fma,Ha*^*
 				[/have_location]
 				[then]
 					{NFWME_frostbite_WOUND}
@@ -155,35 +155,35 @@
 			[/if]
 		[/case]
 		[case]
-			value=13,38,63,88
+			value=13
 			{NFWME_gash_WOUND}
 		[/case]
 		[case]
-			value=14,39,64,89
+			value=14
 			{NFWME_infection_WOUND}
 		[/case]
 		[case]
-			value=15,40,65,90
+			value=15
 			{NFWME_insane_WOUND}
 		[/case]
 		[case]
-			value=16,41,66,91
+			value=16
 			{NFWME_maimed_WOUND}
 		[/case]
 		[case]
-			value=17,42,67,92
+			value=17
 			{NFWME_necrosis_WOUND}			
 		[/case]
 		[case]
-			value=18,43,68,93
+			value=18
 			{NFWME_short_term_memory_loss_WOUND}
 		[/case]
 		[case]
-			value=19,44,69,94
+			value=19
 			{NFWME_sick_WOUND}
 		[/case]
 		[case]
-			value=20,45,70,95
+			value=20
 			[if]
 				[have_unit]
 					x,y=$x1,$y1
@@ -202,7 +202,7 @@
 		
 		#wounds disabled by default
 		[case]
-			value=21,46,71,96
+			value=21
 			[if]
 				{NFWME_dead_ENABLED}
 				[then]
@@ -214,7 +214,7 @@
 			[/if]
 		[/case]
 		[case]
-			value=22,47,72,97
+			value=22
 			[if]
 				{NFWME_funny_ENABLED}
 				[then]
@@ -226,7 +226,7 @@
 			[/if]
 		[/case]
 		[case]
-			value=23,48,73,98
+			value=23
 			[if]
 				{NFWME_funny_ENABLED}
 				[then]
@@ -238,7 +238,7 @@
 			[/if]
 		[/case]
 		[case]
-			value=24,49,74,99
+			value=24
 			[if]
 				{NFWME_undead_ENABLED}
 				[then]
@@ -257,7 +257,7 @@
 			[/if]
 		[/case]
 		[case]
-			value=25,50,75,100
+			value=25
 			[if]
 				{NFWME_undead_ENABLED}
 				[then]
