--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -283,8 +283,9 @@
 				{SECOND_EVENT_UNIT}
 				object_id=fear_of_weapon
 			[/remove_object]
+			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of $second_unit.variables.scary_weapon_translated" {NFWME_COLOR_GREEN}}
 			{CLEAR_VARIABLE $second_unit.variables.scary_weapon}
-			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of $second_unit.variables.scary_weapon" {NFWME_COLOR_GREEN}}
+			{CLEAR_VARIABLE $second_unit.variables.scary_weapon_translated}
 		[/case]
 	[/switch]
 [/event]
