--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -141,6 +141,10 @@
 	name=recall
 	id=nfwme_paid_ransom
 	first_time_only=no
+	[filter]
+		{EVENT_UNIT}
+		ability=captured_unit_display
+	[/filter]
 	[remove_object]
 		[filter]
 			{EVENT_UNIT}
