--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -362,6 +362,10 @@ Face your fears to try and overcome them."
 		name=nfwme_wounded_unit.variables.scary_weapon
 		to_variable=nfwme_rand_scary_weapon
 	[/set_variable]
+	[set_variable]
+		name=nfwme_wounded_unit.variables.scary_weapon_translated
+		to_variable=nfwme_translated_scary_weapon
+	[/set_variable]
 	
 	[unstore_unit]
 		variable=nfwme_wounded_unit
