--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1,141 +1,307 @@
 
+#filter plagueable and plagued units
+
+[event]
+	name=last_breath
+	id=nfwme_death_plague
+	first_time_only=no
+	[filter_condition]
+		[not]
+			[have_location]
+				[filter]
+					x,y=$x1,$y1
+					status=unplagueable
+				[/filter]
+			[/have_location]
+		[/not]
+	[/filter_condition]
+	[filter_second_attack]
+		special_type=plague
+	[/filter_second_attack]
+	{NFWME_dead_WOUND}
+	{VARIABLE nfwe_already_dead yes}	
+[/event]
+
 #random wound table
+
 [event]
 	name=last_breath
 	id=nfwme_wound_table
 	first_time_only=no
-	{VARIABLE_OP rand_wound rand(1..25)}
-	
+	{VARIABLE nfwme_rand_scary_weapon $second_weapon.name}
+	{VARIABLE nfwme_rand_weapon_type $second_weapon.type}
+
+	[if]
+		{VARIABLE_CONDITIONAL nfwe_already_dead not_equals yes}
+		[then]
+			[fire_event]
+				name=nfwme_rand_wound
+				[primary_unit]
+					x,y=$x1,$y1
+				[/primary_unit]
+				[secondary_unit]
+					x,y=$x2,$y2
+				[/secondary_unit]		
+			[/fire_event]
+		[/then]
+		[else]
+			{CLEAR_VARIABLE nfwe_already_dead}
+		[/else]
+	[/if]
+[/event]
+
+[event]
+	name=nfwme_rand_wound
+	id=nfwme_rand_wound_id
+	first_time_only=no
+	{VARIABLE_OP rand_wound rand(1..70)}
 	[switch]
 		variable=rand_wound
 		[case]
-			value=test
-			{NFWME_Coward_WOUND}
-		[/case]
-		
-		[case]
-			value=1
-			{NFWME_amnesia_WOUND}
-		[/case]
-		[case]
-			value=2
-			{NFWME_broken_arm_WOUND}
-		[/case]
-		[case]
-			value=3
-			{NFWME_broken_leg_WOUND}
-		[/case]
-		[case]
-			value=4
-			{NFWME_broken_rib_WOUND}
-		[/case]
-		[case]
-			value=5
-			{NFWME_burned_WOUND}
-		[/case]
-		[case]
-			value=6
-			{NFWME_captured_WOUND}
-		[/case]
-		[case]
-			value=7
+			value=1,68
 			[if]
-				[have_unit]
-					x,y=$x1,$y1
-					[has_attack]
-						special_id=magical
-					[/has_attack]
-				[/have_unit]
+				[have_location]
+					[filter]
+						x,y=$x1,$y1
+						[has_attack]
+							special_id=magical
+						[/has_attack]
+					[/filter]
+				[/have_location]
 				[then]
 					{NFWME_concussion_WOUND}
 				[/then]
 				[else]
-					{NFWME_infection_WOUND}
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
 				[/else]
 			[/if]			
 		[/case]
 		[case]
-			value=8
-			{NFWME_Coward_WOUND}
-		[/case]
-		[case]
-			value=9
-			{NFWME_fear_of_weapon_WOUND}
-		[/case]
-		[case]
-			value=10
+			value=2,3,69
 			[if]
-				[have_location]
-					{EVENT_UNIT}
-					terrain=W*^*,S*^*
-				[/have_location]
+				[not]
+					[have_location]
+						[filter]
+							x,y=$x1,$y1
+							race=mechanical
+						[/filter]
+					[/have_location]
+				[/not]
 				[then]
-					{NFWME_fear_of_water_WOUND}
+					[if]
+						[have_location]
+							{EVENT_UNIT}
+							terrain=W*^*,S*^*
+						[/have_location]
+						[then]
+							{NFWME_fear_of_water_WOUND}
+						[/then]
+						
+						[elseif]
+							[have_location]
+								{EVENT_UNIT}
+								terrain=A*^*,D*^*
+							[/have_location]
+							[then]
+								{NFWME_fear_of_desert_WOUND}
+							[/then]
+						[/elseif]
+						
+						[elseif]
+							[have_location]
+								{EVENT_UNIT}
+								terrain=U*^*
+							[/have_location]
+							[then]
+								{NFWME_fear_of_cave_WOUND}
+							[/then]
+						[/elseif]
+						
+						[elseif]
+							[have_location]
+								{EVENT_UNIT}
+								terrain=M*^*,H*^*
+							[/have_location]
+							[then]
+								{NFWME_fear_of_hight_WOUND}
+							[/then]
+						[/elseif]
+						
+						[elseif]
+							[have_location]
+								{EVENT_UNIT}
+								terrain=F*^*,T*^*
+							[/have_location]
+							[then]
+								{NFWME_fear_of_plant_WOUND}
+							[/then]
+						[/elseif]
+
+						[elseif]
+							[have_location]
+								{EVENT_UNIT}
+								terrain=G*^*,R*^*
+							[/have_location]
+							[then]
+								{NFWME_fear_of_open_WOUND}
+							[/then]
+						[/elseif]
+
+						[else]
+							[fire_event]
+								name=nfwme_rand_wound
+								[primary_unit]
+									x,y=$x1,$y1
+								[/primary_unit]
+								[secondary_unit]
+									x,y=$x2,$y2
+								[/secondary_unit]		
+							[/fire_event]
+						[/else]
+					[/if]
 				[/then]
-				
-				[elseif]
-					[have_location]
-						{EVENT_UNIT}
-						terrain=A*^*,D*^*
-					[/have_location]
-					[then]
-						{NFWME_fear_of_desert_WOUND}
-					[/then]
-				[/elseif]
-				
-				[elseif]
-					[have_location]
-						{EVENT_UNIT}
-						terrain=U*^*
-					[/have_location]
-					[then]
-						{NFWME_fear_of_cave_WOUND}
-					[/then]
-				[/elseif]
-				
-				[elseif]
-					[have_location]
-						{EVENT_UNIT}
-						terrain=M*^*,H*^*
-					[/have_location]
-					[then]
-						{NFWME_fear_of_hight_WOUND}
-					[/then]
-				[/elseif]
-				
-				[elseif]
-					[have_location]
-						{EVENT_UNIT}
-						terrain=F*^*,T*^*
-					[/have_location]
-					[then]
-						{NFWME_fear_of_plant_WOUND}
-					[/then]
-				[/elseif]
 				[else]
-					{NFWME_broken_arm_WOUND}
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
 				[/else]
 			[/if]
 		[/case]
 		[case]
-			value=11
+			value=4
 			[if]
 				[have_location]
-					time_of_day=chaotic
+					[filter]
+						x,y=$x1,$y1
+						race=mechanical
+					[/filter]
 				[/have_location]
 				[then]
-					{NFWME_fear_of_dark_WOUND}
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]				
 				[/then]
-				[elseif]
-					[have_location]
-						time_of_day=lawful
-					[/have_location]
-					[then]
-						{NFWME_fear_of_light_WOUND}
-					[/then]
-				[/elseif]
 				[else]
-					{NFWME_broken_arm_WOUND}
+					[if]
+						[have_location]
+							time_of_day_id=first_watch,second_watch,underground,deep_underground
+						[/have_location]						
+						[then]
+							{NFWME_fear_of_dark_WOUND}
+						[/then]
+						[elseif]
+							[have_location]
+								time_of_day_id=morning,afternoon,midday
+							[/have_location]
+							[then]
+								{NFWME_fear_of_light_WOUND}
+							[/then]
+						[/elseif]
+						[else]
+							[fire_event]
+								name=nfwme_rand_wound
+								[primary_unit]
+									x,y=$x1,$y1
+								[/primary_unit]
+								[secondary_unit]
+									x,y=$x2,$y2
+								[/secondary_unit]		
+							[/fire_event]
+						[/else]
+					[/if]	
+				[/else]
+			[/if]
+		[/case]
+		[case]
+			value=5,6,7
+			[if]
+				{VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals ice}
+				[or]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=A*^*,M*^*,W*^*,*^Esa,*^Fma,Ha*^*
+					[/have_location]
+				[/or]
+				[then]
+					{NFWME_frostbite_WOUND}
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
+				[/else]
+			[/if]
+		[/case]
+		[case]
+			value=8,70
+			[if]
+				[have_location]
+					[filter]
+						x,y=$x1,$y1
+						[has_attack]
+							special_id=magical
+						[/has_attack]
+					[/filter]
+				[/have_location]
+				[then]
+					{NFWME_wild_magic_WOUND}
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
+				[/else]
+			[/if]
+		[/case]
+		[case]
+			value=9,10,11
+			[if]
+				{VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals fire}
+				[then]
+					{NFWME_burned_WOUND}
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
 				[/else]
 			[/if]
 		[/case]
@@ -143,108 +309,292 @@
 			value=12
 			[if]
 				[have_location]
-					{EVENT_UNIT}
-					terrain=A*^*,M*^*,W*^*,*^Esa,*^Fma,Ha*^*
+					[filter]
+						x,y=$x1,$y1
+						race=horse,monster,wolf
+					[/filter]
 				[/have_location]
 				[then]
-					{NFWME_frostbite_WOUND}
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
 				[/then]
+				[elseif]
+					[have_location]
+						[filter]
+							x,y=$x1,$y1
+							race=bats,falcon,gryphon,drake
+						[/filter]
+					[/have_location]
+					[then]
+						[if]
+							[have_location]
+								[filter]
+									formula="$this_unit.max_moves > 1"
+								[/filter]
+							[/have_location]	
+							[then]
+								{NFWME_broken_wind_WOUND}
+							[/then]
+							[else]
+								[fire_event]
+									name=nfwme_rand_wound
+									[primary_unit]
+										x,y=$x1,$y1
+									[/primary_unit]
+									[secondary_unit]
+										x,y=$x2,$y2
+									[/secondary_unit]
+								[/fire_event]
+							[/else]
+						[/if]
+					[/then]
+				[/elseif]
 				[else]
-					{NFWME_infection_WOUND}
+					{NFWME_broken_arm_WOUND}
 				[/else]
-			[/if]
+			[/if]			
 		[/case]
 		[case]
 			value=13
-			{NFWME_gash_WOUND}
-		[/case]
-		[case]
-			value=14
-			{NFWME_infection_WOUND}
-		[/case]
-		[case]
-			value=15
-			{NFWME_insane_WOUND}
-		[/case]
-		[case]
-			value=16
-			{NFWME_maimed_WOUND}
-		[/case]
-		[case]
-			value=17
-			{NFWME_necrosis_WOUND}			
-		[/case]
-		[case]
-			value=18
-			{NFWME_short_term_memory_loss_WOUND}
-		[/case]
-		[case]
-			value=19
-			{NFWME_sick_WOUND}
-		[/case]
-		[case]
-			value=20
 			[if]
-				[have_unit]
-					x,y=$x1,$y1
-					[has_attack]
-						special_id=magical
-					[/has_attack]
-				[/have_unit]
+				[have_location]
+					[filter]
+						x,y=$x1,$y1
+						race=bats,falcon,gryphon,naga,merman
+						[or]
+							formula="$this_unit.max_moves <= 1"
+						[/or]
+					[/filter]
+				[/have_location]
 				[then]
-					{NFWME_wild_magic_WOUND}
-				[/then]
-				[else]
-					{NFWME_sick_WOUND}
-				[/else]
-			[/if]
-		[/case]
-		
-		#wounds disabled by default
-		[case]
-			value=21
-			[if]
-				{NFWME_dead_ENABLED}
-				[then]
-					{NFWME_dead_WOUND}
-				[/then]
-				[else]
-					{NFWME_maimed_WOUND}
-				[/else]
-			[/if]
-		[/case]
-		[case]
-			value=22
-			[if]
-				{NFWME_funny_ENABLED}
-				[then]
-					{NFWME_paper_cut_WOUND}
-				[/then]
-				[else]
-					{NFWME_gash_WOUND}
-				[/else]
-			[/if]
-		[/case]
-		[case]
-			value=23
-			[if]
-				{NFWME_funny_ENABLED}
-				[then]
-					{NFWME_stepped_on_lego_WOUND}
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]					
 				[/then]
 				[else]
 					{NFWME_broken_leg_WOUND}
 				[/else]
+			[/if]				
+		[/case]
+		[case]
+			value=14
+			[if]
+				{VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals impact}
+				[and]
+					[not]
+						[have_location]
+							[filter]
+								x,y=$x1,$y1
+								race=mechanical
+							[/filter]
+						[/have_location]
+					[/not]
+				[/and]
+				[then]
+					{NFWME_broken_rib_WOUND}
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
+				[/else]
+			[/if]			
+		[/case]
+		[case]
+			value=15,16,17
+			[if]
+				{VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals blade}
+				[then]
+					{NFWME_gash_WOUND}
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
+				[/else]
 			[/if]
 		[/case]
 		[case]
+			value=18
+			[if]
+				[have_location]
+					[filter]
+						x,y=$x1,$y1
+						[has_attack]
+							special_id=berserk
+						[/has_attack]
+					[/filter]
+				[/have_location]				
+				[then]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
+				[/then]
+				[else]
+					{NFWME_insane_WOUND}
+				[/else]
+			[/if]	
+		[/case]
+		[case]
+			value=19
+			[if]
+				[have_location]
+					[filter]
+						x,y=$x1,$y1
+						race=mechanical
+					[/filter]
+				[/have_location]
+				[or]
+					[have_location]
+						[filter]
+							x,y=$x1,$y1
+							status=unpoisonable
+						[/filter]
+					[/have_location]					
+				[/or]
+				[then]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
+				[/then]
+				[else]
+					{NFWME_infection_WOUND}
+				[/else]
+			[/if]					
+		[/case]
+		[case]
+			value=20
+			{NFWME_amnesia_WOUND}
+		[/case]
+		[case]
+			value=21
+			{NFWME_captured_WOUND}
+		[/case]
+		[case]
+			value=22
+			[if]
+				[have_location]
+					[filter]
+						x,y=$x1,$y1
+						race=mechanical
+					[/filter]
+				[/have_location]
+				[then]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]					
+				[/then]
+				[else]
+					{NFWME_Coward_WOUND}
+				[/else]
+			[/if]	
+		[/case]
+		[case]
+			value=23
+			{NFWME_fear_of_weapon_WOUND}
+		[/case]
+		[case]
 			value=24
+			{NFWME_maimed_WOUND}
+		[/case]	
+		[case]
+			value=25
+			{NFWME_sick_WOUND}
+		[/case]
+		[case]
+			value=26
+			[if]
+				[have_location]
+					[filter]
+						x,y=$x1,$y1
+						race=mechanical
+					[/filter]
+				[/have_location]
+				[then]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
+
+				[/then]
+				[else]
+					{NFWME_necrosis_WOUND}
+				[/else]
+			[/if]			
+		[/case]
+		[case]
+			value=27
+			{NFWME_short_term_memory_loss_WOUND}
+		[/case]
+		[case]
+			value=28,29,30,31,32,33,34,35,36,37
 			[if]
 				{NFWME_undead_ENABLED}
+				[and]
+					[not]
+						[have_location]
+							[filter]
+								x,y=$x1,$y1
+								[filter_wml]
+									[movetype]
+										name=undeadspirit
+									[/movetype]
+								[/filter_wml]	
+							[/filter]
+						[/have_location]
+					[/not]
+				[/and]
 				[then]
 					{NFWME_undead_ghost_WOUND}
 				[/then]
-				
 				[elseif]
 					{NFWME_dead_ENABLED}
 					[then]
@@ -252,21 +602,93 @@
 					[/then]			
 				[/elseif]				
 				[else]
-					{NFWME_broken_rib_WOUND}
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]				
 				[/else]
 			[/if]
 		[/case]
 		[case]
-			value=25
+			value=38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57
 			[if]
 				{NFWME_undead_ENABLED}
+				[and]
+					[not]
+						[have_location]
+							[filter]
+								x,y=$x1,$y1
+								race=undead
+							[/filter]
+						[/have_location]				
+					[/not]
+				[/and]
 				[then]
 					{NFWME_undead_corpse_WOUND}
 				[/then]
+				[elseif]
+					{NFWME_dead_ENABLED}
+					[then]
+						{NFWME_dead_WOUND}
+					[/then]			
+				[/elseif]	
 				[else]
-					{NFWME_necrosis_WOUND}
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]					
 				[/else]
 			[/if]
 		[/case]
+		[case]
+			value=58,59,60,61,62
+			[if]
+				{NFWME_funny_ENABLED}
+				[then]
+					{NFWME_paper_cut_WOUND}
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
+				[/else]
+			[/if]
+		[/case]
+		[case]
+			value=63,64,65,66,67
+			[if]
+				{NFWME_funny_ENABLED}
+				[then]
+					{NFWME_stepped_on_lego_WOUND}
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
+				[/else]
+			[/if]
+		[/case]		
 	[/switch]
 [/event]
