--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -10,6 +10,12 @@
 		ability=broken_arm_display_healing
 		object_id=broken_arm
 	[/remove_object]
+
+	[remove_object]
+		{EVENT_UNIT}
+		ability=broken_wind_display_healing
+		object_id=broken_wind
+	[/remove_object]
 	
 	[remove_object]
 		{EVENT_UNIT}
@@ -221,6 +227,33 @@
 	[/switch]
 [/event]
 
+#fear of open spaces
+[event]
+	name=last_breath
+	id=nfwme_fear_of_open_healing
+	first_time_only=no
+	{VARIABLE_OP rand_heal_fear rand(1..10)}
+	
+	[filter_second]
+		ability=fear_of_open_display
+		[filter_location]
+			terrain=G*^*,R*^*
+		[/filter_location]
+	[/filter_second]
+	
+	[switch]
+		variable=rand_heal_fear
+		[case]
+			value=1
+			[remove_object]
+				{SECOND_EVENT_UNIT}
+				object_id=fear_of_open
+			[/remove_object]
+			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Agoraphobia" {NFWME_COLOR_GREEN}}
+		[/case]
+	[/switch]
+[/event]
+
 #coward
 [event]
 	name=last_breath
@@ -253,7 +286,7 @@
 			{SECOND_EVENT_UNIT}
 			object_id=coward
 		[/remove_object]
-		{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from cowardice" {NFWME_COLOR_GREEN}}
+		{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Cowardice" {NFWME_COLOR_GREEN}}
 	[/then]
 [/if]
 [/event]
@@ -295,12 +328,12 @@
 	name=last_breath
 	id=nfwme_fear_of_light_healing
 	first_time_only=no
-	{VARIABLE_OP rand_heal_fear rand(1..5)}
+	{VARIABLE_OP rand_heal_fear rand(1..10)}
 	
 	[filter_second]
 		ability=nfwme_scared_of_light
 		[filter_location]
-			time_of_day=lawful
+			time_of_day_id=morning,afternoon,midday
 		[/filter_location]
 	[/filter_second]
 	
@@ -321,12 +354,12 @@
 	name=last_breath
 	id=nfwme_fear_of_dark_healing
 	first_time_only=no
-	{VARIABLE_OP rand_heal_fear rand(1..5)}
+	{VARIABLE_OP rand_heal_fear rand(1..10)}
 	
 	[filter_second]
 		ability=nfwme_scared_of_dark
 		[filter_location]
-			time_of_day=chaotic
+			time_of_day_id=first_watch,second_watch,underground,deep_underground
 		[/filter_location]
 	[/filter_second]
 	
