--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -31,7 +31,7 @@
 			
 			[effect]
 				apply_to=hitpoints
-				increase_total=-15%
+				increase_total=-20%
 			[/effect]
 		[/object]
 	[/modify_unit]
@@ -75,7 +75,7 @@
 	[/modify_unit]
 [/event]
 
-#memory loss
+#memory loss TESTED
 [event]
 	name=side_turn
 	id=nfwme_memory_loss
@@ -88,7 +88,7 @@
 		[/filter]
 		[effect]
 			apply_to=experience
-			increase=-1
+			increase=-2
 		[/effect]
 	[/modify_unit]
 [/event]
@@ -105,7 +105,7 @@
 		
 		#sick wound
 		[case]
-			value=1
+			value=1,8
 			[modify_unit]
 				[filter]
 					ability=sick_display
