--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -239,7 +239,7 @@
 				[or]
 					[have_location]
 						{EVENT_UNIT}
-						terrain=A*^*,M*^*,W*^*,*^Esa,*^Fma,Ha*^*
+						terrain=A*^*,Ms*^*,Rra^*,*^Esa,Ha*^*,*^F*a,*^V*a,C*a^*,K*a^*
 					[/have_location]
 				[/or]
 				[then]
@@ -336,7 +336,8 @@
 						[if]
 							[have_location]
 								[filter]
-									formula="$this_unit.max_moves > 1"
+									x,y=$x1,$y1
+									formula="unit.max_moves <= 1"
 								[/filter]
 							[/have_location]	
 							[then]
@@ -369,7 +370,7 @@
 						x,y=$x1,$y1
 						race=bats,falcon,gryphon,naga,merman
 						[or]
-							formula="$this_unit.max_moves <= 1"
+							formula="unit.max_moves <= 1"
 						[/or]
 					[/filter]
 				[/have_location]
@@ -571,8 +572,29 @@
 			[/if]			
 		[/case]
 		[case]
-			value=27
-			{NFWME_short_term_memory_loss_WOUND}
+			value=27,67
+			[if]
+				[have_location]
+					[filter]
+						x,y=$x1,$y1
+						formula="unit.experience < (unit.max_experience / 2)"
+					[/filter]
+				[/have_location]
+				[then]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+						[secondary_unit]
+							x,y=$x2,$y2
+						[/secondary_unit]		
+					[/fire_event]
+				[/then]
+				[else]
+					{NFWME_short_term_memory_loss_WOUND}
+				[/else]
+			[/if]
 		[/case]
 		[case]
 			value=28,29,30,31,32,33,34,35,36,37
@@ -671,7 +693,7 @@
 			[/if]
 		[/case]
 		[case]
-			value=63,64,65,66,67
+			value=63,64,65,66
 			[if]
 				{NFWME_funny_ENABLED}
 				[then]
