--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -260,20 +260,19 @@
 	id=nfwme_coward_healing
 	first_time_only=no
 
-	[set_variable]
-		name=nfwme_level_diff
-		value=$second_unit.level
-		sub=$unit.level
-	[/set_variable]
-	
 	[filter_second]
 		ability=coward_display
 	[/filter_second]
 	
+	[set_variable]
+		name=nfwme_level_diff
+		value=$second_unit.level
+	[/set_variable]
+		
 [if]
 	[variable]
 		name=nfwme_level_diff
-		less_than=0
+		less_than=$unit.level
 	[/variable]
 	[or]
 		[variable]
